--- a/dily/index.html
+++ b/dily/index.html
@@ -6,6 +6,11 @@
     <meta name="referrer" content="no-referrer" />
     <title>知乎日报</title>
   </head>
+  <style>
+    *{
+      font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
+    }
+  </style>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
